add link to notebook

--- a/simple_bnn_example.ipynb
+++ b/simple_bnn_example.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# The code in this notebook is adopted from the example at this link: https://towardsdatascience.com/from-theory-to-practice-with-bayesian-neural-network-using-python-9262b611b825"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
