add github link

--- a/simple_bnn_example.ipynb
+++ b/simple_bnn_example.ipynb
@@ -8,6 +8,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook code can be found at our GitHub link: https://github.com/jhuan35/stat-431-final-project-bnn/blob/master/simple_bnn_example.ipynb"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
